--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ Me ayudaron con transferencia de calor y masa , me salvaron de una buena ” </p
                 </div>
             </div>
             <div>
-                <div class="card text-center"><img class="card-img-top" src="images/customer3.jpg" alt="">
+                <div class="card text-center"><img class="card-img-top" src="images/customer4.jpg" alt="">
                     <div class="card-body">
                         <h5>Juan Luis Navarro<br/>
                             <span> Estudiante </span></h5>
@@ -343,7 +343,7 @@ Me ayudaron con transferencia de calor y masa , me salvaron de una buena ” </p
         <h2>Últimas noticias y artículos</h2>
         <div class="owl-carousel owl-carousel2 owl-theme">
             <div>
-                <div class="card text-center"><img class="card-img-top" src="images/news1.jpg" alt="">
+                <div class="card text-center"><img class="card-img-top" src="images/news1.webp" alt="">
                     <div class="card-body text-left pr-0 pl-0">
                         <h5>Gran Chocolatada de Andy. </h5>
                         <p class="card-text">El Conocido estremer de Twitch "ElZeein" en colaboracion con empresa conocidas como piel xd. Organizan el que será el evento más esperado por los Carlitos "coneros"
@@ -370,7 +370,7 @@ Me ayudaron con transferencia de calor y masa , me salvaron de una buena ” </p
                 </div>
             </div>
             <div>
-                <div class="card text-center"><img class="card-img-top" src="images/news1.jpg" alt="">
+                <div class="card text-center"><img class="card-img-top" src="images/news3.jpg" alt="">
                     <div class="card-body text-left pr-0 pl-0">
                         <h5>Aenean ultrices lorem quis blandit
                             tempor urabitur accumsan. </h5>
