--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="col-md-6">
                 <h1> Prometemos traer la mejor de las <span>calificaciones</span> para sus exámenes. </h1>
                 <p> Brindamos servicio de calidad para asegurar tu nota aprobada,en tus exámenes y trabajos😄👌 </p>
-                <a href="#">Contact Us <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
+                <a href="https://wa.link/ijx58f">Contact Us <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
             <div class="col-md-6">
                 <div class="card"><img class="card-img-top img-fluid" src="images/banner-img.png" alt=""></div>
             </div>
@@ -424,7 +424,7 @@ Me ayudaron con transferencia de calor y masa , me salvaron de una buena ” </p
                             <li class="nav-item"><a class="nav-link" href="#">Servicios</a></li>
                             <li class="nav-item"><a class="nav-link" href="#">Nosotros</a></li>
                             <li class="nav-item"><a class="nav-link" href="#">Noticias</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">FAQ's</a></li>
+                            <!-- <li class="nav-item"><a class="nav-link" href="#"></a></li> -->
                             <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
                         </ul>
                         <h4 class="mt-5">Síganos</h4>
@@ -433,7 +433,7 @@ Me ayudaron con transferencia de calor y masa , me salvaron de una buena ” </p
                                                                                       aria-hidden="true"></i></a></li>
                             <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-twitter"
                                                                                  aria-hidden="true"></i></a></li>
-                            <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-google"
+                            <li class="nav-item"><a class="nav-link" href="mailto:ginozan.01@gmail.com"><i class="fa fa-google"
                                                                                  aria-hidden="true"></i></a></li>
                             <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-linkedin"
                                                                                  aria-hidden="true"></i></a></li>
@@ -446,7 +446,7 @@ Me ayudaron con transferencia de calor y masa , me salvaron de una buena ” </p
                             <li class="nav-item"><a class="nav-link" href="#">Parciales</a></li>
                             <li class="nav-item"><a class="nav-link" href="#">Trabajos</a></li>
                             <li class="nav-item"><a class="nav-link" href="#">Tareas</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">Programcion</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">Programacion</a></li>
                             <li class="nav-item"><a class="nav-link" href="#">Tutoria</a></li>
                         </ul>
                     </div>
